# hothothot

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  Calculator.cu  Calculator.cuh  Configuration.cpp  Configuration.h  DeviceInfo.cu  DeviceInfo.cuh  Exceptions.cpp  Exceptions.h  HeatMap.cpp  HeatMap.h  ObjectSnapshot.cpp  ObjectSnapshot.h  main.cpp
tests/: CMakeLists.txt  Calculator_test.cpp  Configuration_test.cpp  ObjectSnapshot_test.cpp
